--- a/htmlMain.html
+++ b/htmlMain.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="cssMain.css">
 </head>
 <body>
-    <div id="aside"><h1>Ceci est un bouton</h1></div>
+    <div id="aside"><p>Ceci est un paragraph</p></div>
 </body>
 </html>
